2003-09-25  Bas Wijnen <b.wijnen@phys.rug.nl>
	* ai/client.c: Let ai prefer 2:1 trade.

2003-08-18  Roland Clobus  <rclobus@bigfoot.com>
	* client/client.c, server/resource.c, ai/client.c, ai/greedy.c,
	ai/client.h: Fixed bug 652707. The ai now correctly handles the
	out-of-resource-card situation. Also the client is fixed. As I side
	effect, I enabled the 2:1 trade for the AI.  Applied with minor
	changes by Bas Wijnen.
	
2003-09-25  Bas Wijnen <b.wijnen@phys.rug.nl>
	* po/de.po: Fixed a translation.

2003-08-14  Bas Wijnen <b.wijnen@phys.rug.nl>
	* server/gold.c, client/gold.c: fixed bug that gold was not taken out
	of the bank.  Added support for giving out gold during setup.  Fixed
	display of gold choosing dialog (update bank etc).

2003-08-14  Bas Wijnen <b.wijnen@phys.rug.nl>
	* server/pregame.c server/gold.c server/server.h: gold is now also
	given out in setup phase.

2003-08-14  Bas Wijnen <b.wijnen@phys.rug.nl>
	* client/themes/Iceland/theme.cfg: Made the Iceland theme use its gold
	tile.

2003-08-14  Yusei <yusei@ragondux.com>
	* new file client/ship_move.c; common/game.c, client/gui.c,
	client/Makefile.am, common/common_gtk.c: Fixed truncated long lines
	from server, added a ship move icon, added possibility to make message
	window a fifo.

2003-08-09  Roland Clobus  <rclobus@bigfoot.com>
	* client/player.c: Keep showing the names and scores of disconnected
	players. Now you can see the scores of the other players at the end
	of the game.
	
2003-08-03  Roland Clobus  <rclobus@bigfoot.com>
        * client/client.c, client/client.h, client/develop.c, client/player.c,
	client/player.h, client/resource.c: Fixed bug 600765. The client can
	now play several consecutive games, restart is not needed anymore.

2003-08-02  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* new files client/gold.c, client/gold.png, server/gold.c,
	server/seafarers-gold.game; configure.in, client/Makefile.am,
	client/admin-gtk.c, client/client.c, client/client.h, client/gui.c,